# Edge-AI-framework

./: .gitignore  CMakeLists.txt  LICENSE
examples/: main.cpp
include/data/: data_processing.h
include/hw/: hw_driver.h
include/ml/: ml_model.h
src/data/: CMakeLists.txt  data_processing.cpp
src/hw/: CMakeLists.txt  hw_driver.cpp
src/ml/: CMakeLists.txt  ml_model.cpp
